stylesheet fix for overflowing column headers on ie

--- a/tabulator.css
+++ b/tabulator.css
@@ -13,7 +13,7 @@
   color: #555;
   font-weight: bold;
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow: hidden;
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
