--- a/themes/tabulator_midnight.less
+++ b/themes/tabulator_midnight.less
@@ -52,7 +52,7 @@
 		font-weight:bold;
 
 		white-space: nowrap;
-		overflow-x:hidden;
+		overflow:hidden;
 
 		-moz-user-select: none;
 		-khtml-user-select: none;
