--- a/themes/tabulator_modern.less
+++ b/themes/tabulator_modern.less
@@ -58,7 +58,7 @@
 		font-weight:bold;
 
 		white-space: nowrap;
-		overflow-x:hidden;
+		overflow:hidden;
 
 		-moz-user-select: none;
 		-khtml-user-select: none;
